<resources>
    <string name="app_name">云音乐</string>
    <string name="sz">设置</string>
    <string name="hell">软件名称：云音乐\n开发者：MUQING\n平台：Android/HarmonyOS\n软件介绍：\n
云音乐是一款对接了网易云SDK的音乐媒体娱乐软件。它提供了丰富的音乐资源和功能，让用户可以随时随地畅享高品质的音乐体验。\n
主要特点：\n
丰富的音乐库：云音乐对接了网易云SDK，涵盖了各种流派和风格的歌曲，让用户可以根据自己的喜好随心选择音乐库。\n
用户个性化推荐：基于智能算法，云音乐为用户提供个性化的音乐推荐，根据用户的听歌历史、偏好和趋向，推荐适合用户口味的音乐。\n
歌曲搜索和在线播放：用户可以通过关键词搜索自己喜欢的歌曲，也可以在线播放音乐，无需下载。\n
歌曲收藏和创建歌单：用户可以将喜欢的歌曲收藏起来，创建自己的歌单，方便随时收听。\n
超清音质：云音乐支持高品质的音乐播放，让用户感受更加真实、清晰的音乐体验。\n
歌词显示和歌曲分享：云音乐还提供歌词显示功能，让用户可以跟随歌词唱歌。同时，用户也可以将自己喜欢的歌曲分享给朋友。\n
无论你是需要放松身心、工作休闲，或者在旅途中享受音乐，云音乐都能满足你的需求。欢迎下载使用云音乐，让音乐成为你生活的一部分。\n
\n
请注意，以上只是一个软件介绍的示例，软件具体开发工程还没有完善，具体的介绍内容可以根据实际情况进行体验软件。\n</string>
    <string name="zz">作者</string>
    <string name="name">名称</string>
    <string name="bflb">播放列表</string>
    <string name="login">登录</string>
    <string name="channel_id">channel_id</string>
    <string name="fx">分享</string>
    <string name="hdct">滑动窗体</string>
    <string name="cookie">Cookie</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="search">搜索</string>
    <string name="about">关于软件</string>
    <string name="juanzeng">投币</string>
    <string name="fuwuzhongxing">服务中心</string>
    <string name="shezhizhongxing">设置中心</string>
    <string name="chucunqingli">储存清理</string>
    <string name="guanfangliaoqun">官方聊群</string>
    <string name="lianxizuozhe">联系作者</string>
    <string name="guanyuruanjiang">关于软件</string>
    <string name="deleat">删除</string>
    <string name="lishijilu">历史记录</string>
    <string name="_00_00">00:00</string>
    <string name="music">音乐</string>
    <string name="Playlist">歌单</string>
    <string name="quxiao">取消</string>
    <string name="jianchagegnxin">检查更新</string>
    <string-array name="gd_list">
        <item>下载歌单</item>
        <item>收藏歌单（不可用)</item>
        <item>删除歌单</item>
    </string-array>
    <string-array name="xingbie">
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>