<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/fuwuzhongxing"
        android:title="@string/fuwuzhongxing" />

    <item
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/set_up"
        android:title="@string/shezhizhongxing" />

    <item
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/deleat"
        android:title="@string/chucunqingli" />

    <item
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/liaoqun"
        android:title="@string/guanfangliaoqun" />

    <item
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/qq"
        android:title="@string/lianxizuozhe" />

    <item
        android:id="@+id/f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/app_warning"
        android:title="@string/guanyuruanjiang" />

    <item
        android:id="@+id/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/user_end"
        android:title="@string/tuichudenglu" />
</menu>