<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity_search">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:autofillHints=""
            android:background="@drawable/ui_editview"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/xxbj1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/xxbj2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lishijilu"
                android:textColor="@color/text"
                android:textSize="26sp" />
            <ImageView
                android:id="@+id/deleat"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/deleat"
                android:src="@drawable/deleat" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/xxbj2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <FrameLayout
            android:id="@+id/search_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <ListView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone"
        android:background="@color/bj"/>

</RelativeLayout>
