<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/kp1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="NestedWeights">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_centerHorizontal="true"
                app:cardUseCompatPadding="true">
                <ImageView
                    android:id="@+id/mttx"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_alignStart="@id/view1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textColor="@color/text"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/zz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/zz"
                    android:textSize="20sp" />
            </LinearLayout>

        </RelativeLayout>
        <com.dirror.lyricviewx.LyricViewX
            android:id="@+id/gc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            app:lrcCurrentTextColor="@color/text"
            app:lrcLabel="@string/app_name"
            app:lrcNormalTextSize="16sp"
            app:lrcPadding="16dp"
            app:lrcTextSize="20sp"
            app:lrcTimelineTextColor="@color/text_tm"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/like"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/like"
            app:tint="@color/text"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="3dp"
        android:paddingEnd="3dp">

        <TextView
            android:id="@+id/time_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />

        <SeekBar
            android:id="@+id/tdt"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp" />

        <TextView
            android:id="@+id/time_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="26dp">

        <ImageView
            android:id="@+id/control"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="26dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/mt_sx"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/syq"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/syq"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/kg"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/zt"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/xyq"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:src="@drawable/xyq" />

        <ImageView
            android:id="@+id/bfq_list_mp3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="26dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/cd"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>